# microutils

./: .gitignore  Makefile  README  argc.c  config.h.in  config.status  configure  configure.ac  confirm.c  forever.c  noop.c  ret.c  rmempty.c  uniq_stable.c  write-file.c
src/: Makefile.am  Makefile.in  argv.c  confirm.c  forever.c  respawn.c  toseconds.c  uniq_stable.c
src/.deps/: argc.Po  argv.Po  confirm.Po  forever.Po  noop.Po  respawn.Po  ret.Po  rmempty.Po  toseconds.Po  uniq_stable.Po  write-file.Po
