#AM_CFLAGS = --pedantic -Wall -std=c99 -O2

bin_PROGRAMS = argc argv confirm toseconds forever noop respawn rmempty uniq_stable ret write-file

argc_SOURCES = argc.c
argv_SOURCES = argv.c
confirm_SOURCES = confirm.c
toseconds_SOURCES = toseconds.c
forever_SOURCES = forever.c
noop_SOURCES = noop.c
respawn_SOURCES = respawn.c
rmempty_SOURCES = rmempty.c
uniq_stable_SOURCES = uniq_stable.c
ret_SOURCES = ret.c
write_file_SOURCES = write-file.c
